--- a/my-turborepo/apps/api/package.json
+++ b/my-turborepo/apps/api/package.json
@@ -15,13 +15,18 @@
     "preset": "@repo/jest-presets/jest/node"
   },
   "dependencies": {
+    "@repo/logger": "*",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "@repo/logger": "*",
+    "expressjs": "^1.0.1",
+    "mongodb": "^6.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@repo/eslint-config": "*",
+    "@repo/jest-presets": "*",
+    "@repo/typescript-config": "*",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -29,10 +34,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/supertest": "^2.0.16",
-    "@repo/eslint-config": "*",
-    "@repo/jest-presets": "*",
     "supertest": "^6.3.3",
-    "@repo/typescript-config": "*",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   }
