--- a/my-turborepo/apps/api/tsconfig.json
+++ b/my-turborepo/apps/api/tsconfig.json
@@ -1,10 +1,19 @@
 {
-  "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "lib": ["ES2015"],
-    "module": "CommonJS",
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "jsx": "react",
+    "declaration": true,
     "outDir": "./dist",
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "exclude": ["node_modules"],
-  "include": ["."]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
