--- a/my-turborepo/package.json
+++ b/my-turborepo/package.json
@@ -10,7 +10,11 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "prettier": "^3.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "@types/express-graphql": "^0.9.0",
+    "@types/mongoose": "^5.11.97",
+    "prettier": "^3.1.1",
     "turbo": "latest"
   },
   "engines": {
@@ -20,5 +24,13 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "eslint-config-turbo": "^1.11.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
+  }
 }
