--- a/my-turborepo/apps/api/tsconfig.json
+++ b/my-turborepo/apps/api/tsconfig.json
@@ -1,19 +1,10 @@
 {
+  "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "jsx": "react",
-    "declaration": true,
+    "lib": ["ES2015"],
+    "module": "CommonJS",
     "outDir": "./dist",
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["."]
 }
