--- a/my-turborepo/package.json
+++ b/my-turborepo/package.json
@@ -10,27 +10,11 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.21",
-    "@types/express-graphql": "^0.9.0",
-    "@types/mongoose": "^5.11.97",
-    "prettier": "^3.1.1",
+    "prettier": "^3.1.0",
     "turbo": "latest"
   },
+  "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "npm@9.6.7",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "eslint-config-turbo": "^1.11.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
   }
 }
