--- a/my-turborepo/packages/logger/package.json
+++ b/my-turborepo/packages/logger/package.json
@@ -20,9 +20,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.0",
-    "@repo/eslint-config": "*",
-    "@repo/jest-presets": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/jest-presets": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   }
