--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -10,16 +10,17 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "@repo/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "workspace:*"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "typescript": "^5.3.2",
     "vite": "^5.0.2"
   }
