--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@types/relay-runtime": "^14.1.23",
+    "babel-plugin-relay": "^16.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "relay-runtime": "^16.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
