--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "vite build",
+    "build": "relay-compiler --validate && vite build",
     "clean": "rm -rf dist",
     "dev": "vite --host 0.0.0.0 --port 3001 --clearScreen false",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "relay": "relay-compiler"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "@types/relay-runtime": "^14.1.23",
-    "babel-plugin-relay": "^16.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-relay": "16.2.0",
     "react-router-dom": "^6.22.0",
     "relay-runtime": "^16.2.0"
   },
@@ -23,8 +23,13 @@
     "@repo/typescript-config": "workspace:*",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "@types/react-relay": "16.0.6",
+    "@types/relay-runtime": "^14.1.23",
     "@vitejs/plugin-react": "^4.2.0",
+    "babel-plugin-relay": "^16.2.0",
+    "relay-compiler": "16.2.0",
     "typescript": "^5.3.2",
-    "vite": "^5.0.2"
+    "vite": "^5.0.2",
+    "vite-plugin-relay": "2.1.0"
   }
 }
