--- a/my-turborepo/packages/ui/package.json
+++ b/my-turborepo/packages/ui/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "react-router-dom": "^6.22.0"
   }
 }
