feat(Dashboard): Added dynamic fetching of problems with graphql
- Used apollo client to dynamically fetch problems
- Still need to ensure it's only the users problems being fetched

--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -11,6 +11,7 @@
     "relay": "relay-compiler"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@repo/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
