--- a/my-turborepo/package.json
+++ b/my-turborepo/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "prettier": "^3.1.0",
-    "turbo": "latest"
+    "turbo": "^1.11.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
