--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "babel-plugin-relay": "^16.2.0",
     "relay-compiler": "16.2.0",
+    "styled-components": "^6.1.8",
     "typescript": "^5.3.2",
     "vite": "^5.0.2",
     "vite-plugin-relay": "2.1.0"
