--- a/my-turborepo/packages/ui/package.json
+++ b/my-turborepo/packages/ui/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "jest": "^29.7.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "styled-components": "^6.1.8"
   }
 }
