feat( problemResolver.ts ): Editing component in relay
- Added editing mutation
- fixed problemResolver.ts bugs

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "cd my-turborepo turbo build dev"
+    "run": "cd my-turborepo turbo build dev",
+    "build_relay": "cd my-turborepo/apps/admin/src/mutations pnpm run relay"
   },
   "keywords": [],
   "author": "",
