fix: (is-auth.ts): Added admin permissions
- Now, only the admin can query all problems and all users as well

- Closes #94

--- a/my-turborepo/packages/ui/tsconfig.json
+++ b/my-turborepo/packages/ui/tsconfig.json
@@ -4,6 +4,6 @@
     "lib": ["dom", "ES2015"],
     "types": ["jest", "node"]
   },
-  "include": ["."],
+  "include": [".ts", "src", "src/CreateButton/index.test.tsx", "src/Header/index.test.tsx"],
   "exclude": ["dist", "build", "node_modules"]
 }
