--- a/my-turborepo/packages/ui/package.json
+++ b/my-turborepo/packages/ui/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "jest": "^29.7.0",
     "react-router-dom": "^6.22.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "ts-jest": "^29.1.1"
   }
 }
