--- a/my-turborepo/apps/admin/package.json
+++ b/my-turborepo/apps/admin/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@apollo/client": "^3.9.5",
     "@repo/ui": "workspace:*",
+    "@types/js-cookie": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "16.2.0",
