--- a/my-turborepo/packages/ui/package.json
+++ b/my-turborepo/packages/ui/package.json
@@ -35,7 +35,9 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "jest": "^29.7.0",
+    "js-cookie": "^3.0.5",
     "react-router-dom": "^6.22.0",
     "styled-components": "^6.1.8",
     "ts-jest": "^29.1.1"
