--- a/my-turborepo/apps/api/package.json
+++ b/my-turborepo/apps/api/package.json
@@ -15,6 +15,7 @@
     "preset": "@repo/jest-presets/jest/node"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@repo/logger": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.0",
@@ -30,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
