--- a/my-turborepo/packages/jest-presets/package.json
+++ b/my-turborepo/packages/jest-presets/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
   },
