feat: Added email sending feature to frontend

--- a/my-turborepo/apps/api/.env.example
+++ b/my-turborepo/apps/api/.env.example
@@ -1,2 +1,12 @@
-MONGODB_URI=your-mongodb-connection-uri
+PRODUCTION=boolean-prod-value
+MONGODB_URI=mongodb-uri
 JWT_KEY=your-jwt-key
+AWS_ACCESS_KEY=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-aws-access-key
+AWS_REGION=your-aws-region
+AWS_API_VERSION=your-aws-api-version
+AWS_SMTP_ENDPOINT=your-aws-smtp-endpoint
+AWS_SMTP_PORT=your-aws-smtp-port
+AWS_SMTP_USERNAME=your-aws-smtp-username
+AWS_SMTP_PASSWORD=your-aws-smtp-password
+VERIFIED_EMAIL_ADDRESS=your-aws-smtp-verified-email-address
