--- a/my-turborepo/apps/mainpage/package.json
+++ b/my-turborepo/apps/mainpage/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.9.5",
     "@repo/ui": "workspace:*",
     "@types/js-cookie": "^3.0.6",
+    "dotenv": "^16.4.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
