--- a/my-turborepo/apps/mainpage/package.json
+++ b/my-turborepo/apps/mainpage/package.json
@@ -8,31 +8,44 @@
     "dev": "vite --host 0.0.0.0 --port 3001 --clearScreen false",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
-    "relay": "relay-compiler"
+    "relay": "relay-compiler",
+    "test": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
+    "@jest/globals": "^29.7.0",
     "@repo/ui": "workspace:*",
     "@types/dotenv": "^8.2.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/relay-test-utils": "^14.1.4",
     "dotenv": "^16.4.1",
+    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-relay": "16.2.0",
     "react-router-dom": "^6.22.0",
-    "relay-runtime": "^16.2.0"
+    "react-test-renderer": "^18.3.1",
+    "relay-runtime": "^16.2.0",
+    "ts-jest": "^29.1.1",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@types/react-relay": "16.0.6",
     "@types/relay-runtime": "^14.1.23",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/spy": "^1.6.0",
+    "babel-jest": "^29.7.0",
     "babel-plugin-relay": "^16.2.0",
     "relay-compiler": "16.2.0",
+    "relay-test-utils": "^16.2.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.2",
     "vite": "^5.0.2",
