--- a/my-turborepo/apps/mainpage/package.json
+++ b/my-turborepo/apps/mainpage/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.1",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
+    "mongodb": "^6.3.0",
+    "mongodb-memory-server": "^9.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-relay": "16.2.0",
