--- a/my-turborepo/apps/api/package.json
+++ b/my-turborepo/apps/api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "turbo dev",
+    "start:test": "cross-env NODE_ENV=test turbo dev",
     "dev": "tsup --watch --onSuccess \"node dist/index.js\"",
     "dev:debug": "node --inspect-brk dist/index.js",
     "build": "tsup",
