fix: test environment set up
- Added a local mongodb container instance to hold test values
- Added a test api to make sure the normal api is connected to the cloud mongodb instance
- Added github actions workflow to test everything if commit to the main branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,13 @@ jobs:
         with:
           node-version: '18'
       - name: Install dependencies
-        run: npm ci
+        run: pnpm ci
       - name: Run tests
         run: |
           export NODE_ENV=test
           export API_URL=http://localhost:4001/graphql
           export MONGODB_URI=mongodb://localhost:27017/testdb
           docker-compose up -d test-mongodb
-          npm run start:api & 
+          pnpm run start:api & 
           sleep 10
-          npm test
+          pnpm test
